# mlops-practice-2

./: .env  .env.example  .gitignore  .gitlab-ci.yml  docker-compose.dev.yaml  docker-compose.yaml  dvc.yaml  dvc_ci.yaml  pyproject.toml
.dvc/: config
Docker/: .gitignore
Docker/gitlab/config/: config.toml
Docker/model_service/: Dockerfile
data/raw/: .gitignore  all_v2.csv.dvc
postman_sample_requests/: MLflow.postman_collection.json  test_x.csv
src/: __init__.py
src/app/: inference.py
src/data/: clean_data.py
src/features/: add_features.py
src/models/: evaluate.py  train.py
tests/: test_clean_data.py  test_get_osm_cafes_data.py  test_select_region.py  test_train.py
